# franz

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md
client/bas/: README.md  consumer.sh  producer.sh
client/c/: Consumer.c  Makefile  Producer.c  README.md
client/cpp/: Makefile  README.md  consumer.cpp  producer.cpp
client/csh/: KafkaClient.sln  README.md  csh.csproj
client/gol/: README.md  consumer.go  go.mod  go.sum  producer.go  scram.go
client/jav/: README.md  pom.xml
client/jav/src/main/java/com/example/: Consumer.java  Message.java  Producer.java
client/pyt/: consumer.py  producer.py
client/rus/: Cargo.toml
client/rus/src/: main.rs
client/sca/: README.md  build.sbt
client/sca/src/main/scala/com/example/: Consumer.scala  Message.scala  Producer.scala
client/ts/: README.md  package.json
client/ts/src/: consumer.js  consumer.ts  producer.js  producer.ts
deploy/: README.md  cluster.yaml  topics.yaml
