[package]
name = "rus"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["ssl", "sasl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"